--- a/package.json
+++ b/package.json
@@ -63,8 +63,12 @@
     "validation",
     "zod",
     "yup",
+    "joi",
     "ssr",
-    "nextjs"
+    "nextjs",
+    "typescript",
+    "hooks",
+    "form-management"
   ],
   "author": "docv.hcm@gmail.com",
   "license": "MIT",
@@ -78,12 +82,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "zod": ">=3.0.0 <5.0.0",
+    "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/node": "^20",
     "tsup": "^8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.0.0",
+    "yup": "^1.0.0",
+    "joi": "^17.0.0",
+    "@types/yup": "^0.32.0",
+    "@types/joi": "^17.2.3"
   },
   "publishConfig": {
     "access": "public"
